# itu-MLOps-project

project/project_repo/: LICENSE  Makefile  README.md  pyproject.toml
project/project_repo/.dvc/: config
project/project_repo/docs/: mkdocs.yml
project/project_repo/docs/docs/: index.md
