[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "new_customers_classifier"
version = "0.0.1"
description = "A system that can predict whether a user will become a new customer."
authors = [
  { name = "The Deploy Squad" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["new_customers_classifier"]
include = ["pyproject.toml", "new_customers_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["new_customers_classifier"]
force-sort-within-sections = true

